cabal-version:      2.4
name:               frisby-advent-of-code2023
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Nicolas Frisby
maintainer:         nicolas.frisby@gmail.com

executable frisby-advent-of-code2023
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Day1
        Day2
        Day3

    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-uni-patterns
        -Wincomplete-record-updates -Wpartial-fields -Widentities
        -Wredundant-constraints -Wmissing-export-lists -Wunused-packages
        -Wno-unticked-promoted-constructors

    build-depends:
      , base ^>=4.17.2.0
      , containers
      , megaparsec
    
    hs-source-dirs:   app
